# SafeSelfPlay

./: .gitignore  ABS_PSRO_EXPERIMENT_CONSTRAINTS.md  ABS_PSRO_README.md  README.md  install_deps.sh  modal_abs_attack_probe.py  modal_abs_attacker_sft.py  modal_abs_benchmark.py  modal_fsp_demo.py  modal_psro_3b_1k.py  modal_psro_3b_nowhiten_1k.py  modal_sft_base_psro_once.py  requirements_common.txt  requirements_torch2100_vllm.txt  requirements_torch260_diffsynth.txt  requirements_torch260_sglang.txt  requirements_torch260_vllm.txt  requirements_torch280_sglang.txt  requirements_torch280_vllm.txt  run_abs_wildguard_s100.sh  run_asym_psro_fixed_s100.sh  run_coldstart_compare_s100.sh  run_coldstart_iter100_select_5x.sh  run_frozen_lake_demo.sh  run_fsp_train.sh  run_sokoban_all.sh  setup_env.sh  stats.json
mcore_adapter/: Makefile  pyproject.toml  requirements.txt
mcore_adapter/src/mcore_adapter/: __init__.py  patcher.py  training_args.py  utils.py
mcore_adapter/src/mcore_adapter/adapters/: lora_layer.py
mcore_adapter/src/mcore_adapter/models/: __init__.py  model_config.py  model_factory.py  model_utils.py
mcore_adapter/src/mcore_adapter/models/converter/: convert_utils.py  dist_converter.py  model_converter.py  post_converter.py  template.py
mcore_adapter/src/mcore_adapter/models/qwen2_5_vl/: modeling_qwen2_5_vl.py
mcore_adapter/src/mcore_adapter/models/qwen2_vl/: modeling_qwen2_vl.py
mcore_adapter/src/mcore_adapter/parallel_functions/: __init__.py  encoder_sequence_parallel.py
mcore_adapter/src/mcore_adapter/trainer/: trainer.py  utils.py
(+428 files in other folders)
